# Application-Assistant

./: .env.example  .gitignore  Dockerfile  JOB_FINDER_DESIGN.md  LICENSE  README.md  fly.toml  pyproject.toml
jobs/: input_urls.txt
profile/: companies.yaml  skill_synonyms.yaml
profile/samples/: master_profile.example.yaml  secrets.example.yaml
runs/: _finder_queue.xlsx
runs/_batch_2026-05-01/: batch_summary.md  scorecards.json
scripts/: batch_summary.py  bench_run.py  init_profile.py  launch_ngrok.sh
src/job_apply/: __init__.py  approval_queue.py  bench.py  candidate_brief.py  cli.py  config.py  contact_research.py  email_to_self.py  email_writer.py  jd_analysis.py  job_analyzer.py  job_ingest.py  llm_client.py  mail_draft.py  packet_artifacts.py  profile_chat.py  profile_loader.py  qa_pass.py  rank.py  render.py  render_docx.py  render_pdf.py  (+5 more)
tests/: conftest.py  test_approval_queue.py  test_auth_onboarding.py  test_clearance_detector.py  test_cli_help.py  test_cli_v1_commands.py  test_contact_research.py  test_email_to_self.py  test_evidence_weighting.py  test_finder.py  test_jd_analysis.py  test_job_analyzer.py  test_job_ingest.py  test_llm_client.py  test_location_match.py  test_mail_draft.py  test_packet_artifacts.py  test_pii_leak_grep.py  test_posting_quality_gate.py  test_profile_chat.py  test_profile_loader.py  test_qa_pass.py  test_ranking.py  test_render_pdf_docx.py  test_render_scrub.py  test_source_confidence.py  test_state.py  test_synonyms.py  test_tailor_pipeline.py  test_tracker.py  test_validators_fabrication.py  test_validators_schema.py
(+147 files in other folders)
